--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <body>
         <center>
             <h1>Welcome to Devops world</h1>
+            <h2>This is my Git Training</h2>
+            <button>Click here</button>
         </center>
     </body>
 </html>
